# test-recorder

./: .gitignore  README.md  index.html  package-lock.json  package.json  project-structure.txt
src/: App.css  App.tsx  App_simple.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main_simple.rs  models.rs  process_monitor.rs  recorder.rs  window_capture.rs
src/components/: RecordingButton.tsx  StatusPanel.tsx  TradeHistory.tsx
src/hooks/: useRecorder.ts
