[package]
name = "test-recorder"
version = "0.1.0"
description = "HTS Trading Recorder"
authors = ["Seol"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "fs-all", "shell-open", "window-show", "window-minimize", "window-set-focus", "window-maximize", "window-hide", "window-close", "notification"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# 화면 캡처 (안정적인 라이브러리만)
screenshots = "0.6"

# 프로세스 모니터링
sysinfo = "0.30"

# 윈도우 캡처
xcap = "0.0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
